# cmm

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: wheel.yml
src/: lcms2-patch.diff  main.cpp
tests/: test_from_python.py
tests/resource/: Linear P3D65.icc  profile.icc  sublinova-epson4pigment-PBT-20231121_srgb.icc  ws_img.npy
